Fixed horizontal scroll issue and responsive design

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   text-align: right !important;
   background-color: var(--light-color);
   color: var(--primary-color);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   font-size: 16px !important;
   font-family: "Tajawal", sans-serif;
 }
@@ -725,6 +725,9 @@ footer {
   .hero h1 {
     font-size: 2.8rem;
   }
+    body,html{
+    overflow-x: hidden !important;
+  }
 }
 
 @media (max-width: 768px) {
@@ -758,6 +761,9 @@ footer {
     text-align: center;
     padding: 0 12px;
   }
+    body,html{
+    overflow-x: hidden !important;
+  }
 }
 
 @media (max-width: 576px) {
@@ -777,6 +783,9 @@ footer {
   .portfolio-overlay p{
     text-align: center;
     padding: 0 12px;
+  }
+  body,html{
+    overflow-x: hidden !important;
   }
 }
 
